add inject to odh-dashboard

--- a/odh-dashboard/base/deployment.yaml
+++ b/odh-dashboard/base/deployment.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         deployment: odh-dashboard
     spec:
+      template:
+        metadata:
+          annotations:
+            sidecar.istio.io/inject: "true"
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
