add label to manager

--- a/odh-notebook-controller/kf-notebook-controller/manager/manager.yaml
+++ b/odh-notebook-controller/kf-notebook-controller/manager/manager.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: notebook-controller
         kustomize.component: notebook-controller
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: manager
