--- a/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
+++ b/odh-notebook-controller/odh-notebook-controller/manager/manager.yaml
@@ -10,6 +10,7 @@ spec:
     metadata:
       annotations:
         kubectl.kubernetes.io/default-container: manager
+        sidecar.istio.io/inject: "true"
     spec:
       serviceAccountName: manager
       terminationGracePeriodSeconds: 10
