feat(istio): enables USE_ISTIO env var in nb-ctrl
This way needed VirtualServices will be created on the fly
together with the new notebook server.

--- a/odh-notebook-controller/kf-notebook-controller/overlays/openshift/kustomization.yaml
+++ b/odh-notebook-controller/kf-notebook-controller/overlays/openshift/kustomization.yaml
@@ -16,7 +16,7 @@ configMapGenerator:
   - name: config
     behavior: merge
     literals:
-      - USE_ISTIO=false
+      - USE_ISTIO=true
       - ADD_FSGROUP=false
 patchesStrategicMerge:
   - remove_namespace_patch.yaml
