--- a/oauth/base/deployment.yaml
+++ b/oauth/base/deployment.yaml
@@ -27,12 +27,19 @@ spec:
         - --upstream=http://localhost:8080
         - --tls-cert=/etc/tls/private/tls.crt
         - --tls-key=/etc/tls/private/tls.key
+        - --cookie-secret-file=/etc/oauth/config/cookie_secret
+        - --cookie-expire=23h0m0s
         - --cookie-secret=SECRET
         - --pass-access-token
         volumeMounts:
         - mountPath: /etc/tls/private
           name: proxy-tls
+        - mountPath: /etc/oauth/config
+          name: oauth-config
       volumes:
         - name: proxy-tls
           secret:
             secretName: proxy-tls
+        - name: oauth-config
+          secret:
+            secretName: oauth-config-generated
