--- a/oauth/base/kustomization.yaml
+++ b/oauth/base/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- oauth.secret.yaml
 - deployment.yaml
 - route.yaml
 - service-account.yaml
