--- a/oauth/base/oauth.secret.yaml
+++ b/oauth/base/oauth.secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dashboard-oauth-config
+  name: oauth-config
   annotations:
     secret-generator.opendatahub.io/name: "cookie_secret"
     secret-generator.opendatahub.io/type: "oauth"
