--- a/oauth/base/deployment.yaml
+++ b/oauth/base/deployment.yaml
@@ -9,6 +9,8 @@ spec:
       app: proxy
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
       labels:
         app: proxy
     spec:
