--- a/service-mesh/control-plane.yaml
+++ b/service-mesh/control-plane.yaml
@@ -30,12 +30,13 @@ spec:
       enabled: true
       name: kiali
   techPreview:
-    extensionProviders:
-      - name: oauth2-proxy
-        envoyExtAuthzHttp:
-          service: proxy.opendatahub.svc.cluster.local
-          port: 80
-          timeout: 1.5s
-          includeHeadersInCheck: ["authorization", "cookie"]
-          headersToUpstreamOnAllow: ["x-forwarded-access-token", "authorization", "path", "x-auth-request-user", "x-auth-request-email", "x-auth-request-access-token"]
-          headersToDownstreamOnDeny: ["content-type", "set-cookie"]
+    meshConfig:
+      extensionProviders:
+        - name: oauth2-proxy
+          envoyExtAuthzHttp:
+            service: proxy.opendatahub.svc.cluster.local
+            port: 80
+            timeout: 1.5s
+            includeHeadersInCheck: ["authorization", "cookie"]
+            headersToUpstreamOnAllow: ["x-forwarded-access-token", "authorization", "path", "x-auth-request-user", "x-auth-request-email", "x-auth-request-access-token"]
+            headersToDownstreamOnDeny: ["content-type", "set-cookie"]
