--- a/service-mesh/gateway.yaml
+++ b/service-mesh/gateway.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: odh-gateway
-  namespace: opendatahub
+ name: odh-gateway
+ namespace: opendatahub
 spec:
-  selector:
-    istio: ingressgateway
-  servers:
-  - port:
-      number: 443
-      name: https
-      protocol: HTTPS
-    tls:
-      mode: SIMPLE
-      credentialName: odh-dashboard-credential # must be the same as secret
-    hosts:
-    - "*"
+ selector:
+   istio: ingressgateway
+ servers:
+ - port:           
+     number: 443
+     name: https  
+     protocol: HTTPS
+   tls:
+     mode: SIMPLE
+     credentialName: odh-dashboard-credential 
+   hosts:
+   - '*'
