--- a/oauth/base/deployment.yaml
+++ b/oauth/base/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       annotations:
-        sidecar.istio.io/inject: "false"
+        sidecar.istio.io/inject: "true"
       labels:
         app: proxy
     spec:
@@ -26,7 +26,7 @@ spec:
         - --http-address=:8180
         - --provider=openshift
         - --openshift-service-account=proxy
-        - --upstream= [ "static://200" ]
+        - --upstream=static://200
         - --tls-cert=/etc/tls/private/tls.crt
         - --tls-key=/etc/tls/private/tls.key
         - --cookie-secret-file=/etc/oauth/config/cookie_secret
