add arg to echo

--- a/oauth/base/deployment.yaml
+++ b/oauth/base/deployment.yaml
@@ -27,8 +27,8 @@ spec:
         - --provider=openshift
         - --openshift-service-account=proxy
         - --upstream=http://localhost:5678
-        # - --tls-cert=/etc/tls/private/tls.crt
-        # - --tls-key=/etc/tls/private/tls.key
+        - --tls-cert=/etc/tls/private/tls.crt
+        - --tls-key=/etc/tls/private/tls.key
         - --cookie-secret-file=/etc/oauth/config/cookie_secret
         - --cookie-expire=23h0m0s
         - --cookie-secret=SECRET
@@ -44,6 +44,8 @@ spec:
         ports:
           - name: echo-port
             containerPort: 5678
+        args:
+          - -text=helloproxy
       volumes:
         - name: proxy-tls
           secret:
