--- a/oauth/base/gateway.yaml
+++ b/oauth/base/gateway.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: proxy-gateway
-  namespace: opendatahub
+  name: auth-gateway
+  namespace: ext-auth # TODO: can we refer to variables/templating for kustomize to reduce repetition
 spec:
   selector:
     istio: ingressgateway
