--- a/oauth/base/kustomization.yaml
+++ b/oauth/base/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ext-auth
 resources:
 - oauth.secret.yaml
 - deployment.yaml
-- route.yaml
-- service-account.yaml
 - service.yaml
+- smm.yaml
 images:
 - name: oauth-proxy
   newName: registry.redhat.io/openshift4/ose-oauth-proxy
