--- a/oauth/base/deployment.yaml
+++ b/oauth/base/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: proxy
+  namespace: ext-auth
 spec:
   replicas: 1
   selector:
@@ -14,7 +15,6 @@ spec:
       labels:
         app: proxy
     spec:
-      serviceAccountName: proxy
       containers:
       - name: oauth-proxy
         image: quay.io/openshift/origin-oauth-proxy:latest
