--- a/oauth/base/oauth.secret.yaml
+++ b/oauth/base/oauth.secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: oauth-config
+  namespace: ext-auth
   annotations:
     secret-generator.opendatahub.io/name: "cookie_secret"
     secret-generator.opendatahub.io/type: "oauth"
