--- a/oauth/base/service.yaml
+++ b/oauth/base/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: proxy
+  namespace: ext-auth
   annotations:
     service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
 spec:
