--- a/oauth/base/kustomization.yaml
+++ b/oauth/base/kustomization.yaml
@@ -2,6 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ext-auth
 resources:
+- role.yaml
+- role-binding.yaml
+- cluster-role.yaml
+- cluster-role-binding.yaml
 - smm.yaml
 - oauth.secret.yaml
 - service-account.yaml
