--- a/oauth/base/cluster-role-binding.yaml
+++ b/oauth/base/cluster-role-binding.yaml
@@ -1,11 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ext-auth
+  name: auth-delegator-ext-auth
 subjects:
   - kind: ServiceAccount
     name: ext-auth
+    namespace: ext-auth
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ext-auth
+  name: system:auth-delegator
