--- a/oauth/base/service-account.yaml
+++ b/oauth/base/service-account.yaml
@@ -1,8 +1,9 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: ext-auth
+  name: auth-service
   annotations:
+    # TODO this needs to be changed
     serviceaccounts.openshift.io/oauth-redirecturi.hello: https://opendatahub-odh-gateway-525eca1d5089dbdc-istio-system.apps.camcluster0.lab.upshift.rdu2.redhat.com/oauth/callback
     # serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"ext-auth-auth-gateway-525eca1d5089dbdc"}}'
     # serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"opendatahub-odh-gateway-525eca1d5089dbdc"}}'
