--- a/oauth/base/kustomization.yaml
+++ b/oauth/base/kustomization.yaml
@@ -1,19 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ext-auth
+namespace: auth-provider
 resources:
-- role.yaml
-- role-binding.yaml
-- cluster-role.yaml
-- cluster-role-binding.yaml
-- smm.yaml
-- oauth.secret.yaml
+- secrets.yaml
 - service-account.yaml
-- auth-delegator.clusterrolebinding.yaml
-- cluster-monitoring-role-binding.yaml
 - deployment.yaml
 - service.yaml
 images:
 - name: oauth-proxy
-  newName: registry.redhat.io/openshift4/ose-oauth-proxy
-  newTag: v4.8
+  # newName: registry.redhat.io/openshift4/ose-oauth-proxy
+  # newTag: v4.8
+  newName: quay.io/openshift/origin-oauth-proxy
+  newTag: latest
+- name: http-https-echo
+  newName: quay.io/bmajsak/http-https-echo
+  newTag: token
