--- a/oauth/base/service.yaml
+++ b/oauth/base/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: proxy
-  namespace: ext-auth
+  name: auth-service
+  namespace: auth-provider
   annotations:
-    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
+    service.alpha.openshift.io/serving-cert-secret-name: auth-service-cert
 spec:
   ports:
-  - name: proxy
+  - name: http
     port: 80
     targetPort: 8180
   selector:
-    app: proxy
+    app: auth-service
