--- a/oauth/rbac/auth-delegator.clusterrolebinding.yaml
+++ b/oauth/rbac/auth-delegator.clusterrolebinding.yaml
@@ -1,11 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: ext-auth-auth-delegator
+  name: auth-service-auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:auth-delegator
 subjects:
   - kind: ServiceAccount
-    name: ext-auth
+    name: auth-service
+    namespace: auth-provider
