--- a/oauth/rbac/cluster-monitoring-role-binding.yaml
+++ b/oauth/rbac/cluster-monitoring-role-binding.yaml
@@ -1,12 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: auth-delegator-ext-auth
+  name: auth-service-monitoring
 subjects:
   - kind: ServiceAccount
-    name: ext-auth
-    namespace: ext-auth
+    name: auth-service
+    namespace: auth-provider
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:auth-delegator
+  name: cluster-monitoring-view
