--- a/oauth/rbac/cluster-role-binding.yaml
+++ b/oauth/rbac/cluster-role-binding.yaml
@@ -1,11 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ext-auth-monitoring
+  name: auth-service
 subjects:
   - kind: ServiceAccount
-    name: ext-auth
+    name: auth-service
+    namespace: auth-provider
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-monitoring-view
+  name: auth-service
