--- a/oauth/rbac/cluster-role.yaml
+++ b/oauth/rbac/cluster-role.yaml
@@ -1,7 +1,8 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ext-auth
+  name: auth-service
+  namespace: auth-provider
 rules:
   - verbs:
       - get
