--- a/oauth/rbac/role-binding.yaml
+++ b/oauth/rbac/role-binding.yaml
@@ -1,11 +1,12 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: ext-auth
+  name: auth-service
+  namespace: auth-provider
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: ext-auth
+  name: auth-service
 subjects:
   - kind: ServiceAccount
-    name: ext-auth
+    name: auth-service
