--- a/service-mesh/kustomization.yaml
+++ b/service-mesh/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: istio-system
 resources:
-- oauth.secret.yaml
-- deployment.yaml
-- route.yaml
-- service-account.yaml
-- service.yaml
+- namespace.yaml
+- cert-secret.yaml
+- control-plane.yaml
+- gateway.yaml
+- virtual-service.yaml
