--- a/oauth/base/service-account.yaml
+++ b/oauth/base/service-account.yaml
@@ -3,8 +3,6 @@ apiVersion: v1
 metadata:
   name: auth-service
   annotations:
-    # TODO this needs to be changed
-    serviceaccounts.openshift.io/oauth-redirecturi.hello: https://opendatahub-odh-gateway-525eca1d5089dbdc-istio-system.apps.camcluster0.lab.upshift.rdu2.redhat.com/oauth/callback
-    # serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"ext-auth-auth-gateway-525eca1d5089dbdc"}}'
-    # serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"opendatahub-odh-gateway-525eca1d5089dbdc"}}'
-    # for now hardcoded our IOR created route name for odh-dashboard and 
+    serviceaccounts.openshift.io/oauth-redirecturi.first:  "oauth/callback"
+    serviceaccounts.openshift.io/oauth-redirectreference.first: >-
+      {"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"oauth-client"}}
