fix: uses istio injection label
As annotation has been deprecated

--- a/odh-dashboard/base/deployment.yaml
+++ b/odh-dashboard/base/deployment.yaml
@@ -10,6 +10,7 @@ spec:
   template:
     metadata:
       labels:
+        sidecar.istio.io/inject: "true"
         deployment: odh-dashboard
     spec:
       affinity:
