--- a/odh-dashboard/overlays/service-mesh/virtual-service.yaml
+++ b/odh-dashboard/overlays/service-mesh/virtual-service.yaml
@@ -1,16 +1,15 @@
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: auth-service-vs
-  namespace: auth-provider
+  name: odh-dashboard
 spec:
   gateways:
-  - auth-gateway
+  - odh-gateway
   hosts:
   - "*"
   http:
   - route:
     - destination:
-        host: auth-service
+        host: odh-dashboard
         port:
           number: 80
