--- a/service-mesh/kustomization.yaml
+++ b/service-mesh/kustomization.yaml
@@ -1,9 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: istio-system
+# Expects maistra-operator to be installed 
 resources:
 - namespace.yaml
 - cert-secret.yaml
 - control-plane.yaml
-- gateway.yaml
-- virtual-service.yaml
