--- a/odh-dashboard/overlays/service-mesh/virtual-service.yaml
+++ b/odh-dashboard/overlays/service-mesh/virtual-service.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: odh-dashboard
+  namespace: opendatahub
 spec:
   gateways:
   - odh-gateway
