tmp: adds multiple static redirects to unblock

--- a/oauth/base/service-account.yaml
+++ b/oauth/base/service-account.yaml
@@ -3,6 +3,13 @@ apiVersion: v1
 metadata:
   name: auth-service
   annotations:
+    # this is not working, as we are coming from istio-ingress (so different route in the different ns)
     serviceaccounts.openshift.io/oauth-redirecturi.first:  "oauth/callback"
     serviceaccounts.openshift.io/oauth-redirectreference.first: >-
       {"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"oauth-client"}}
+    serviceaccounts.openshift.io/oauth-redirecturi.crc: >-
+      https://opendatahub-odh-gateway-525eca1d5089dbdc-istio-system.apps-crc.testing/oauth/callback
+    serviceaccounts.openshift.io/oauth-redirecturi.istio: >-
+      https://istio-ingressgateway-istio-system.apps-crc.testing/oauth/callback
+    serviceaccounts.openshift.io/oauth-redirecturi.cam: >- 
+      https://opendatahub-odh-gateway-525eca1d5089dbdc-istio-system.apps.camcluster0.lab.upshift.rdu2.redhat.com/oauth/callback
