port 443, fix hostname

--- a/odh-notebook-controller/overlays/service-mesh/virtual-service.yaml
+++ b/odh-notebook-controller/overlays/service-mesh/virtual-service.yaml
@@ -11,8 +11,8 @@ spec:
   http:
   - route:
     - destination:
-        host: webhook-service
+        host: odh-notebook-controller-webhook-service
         port:
-          number: 80
+          number: 443
 
 
