--- a/auth/base/deployment.yaml
+++ b/auth/base/deployment.yaml
@@ -12,7 +12,7 @@ spec:
     metadata:
       labels:
         app: auth-service
-        sidecar.istio.io/inject: "true"
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccount: auth-service
       containers:
