--- a/odh-dashboard/base/kustomization.yaml
+++ b/odh-dashboard/base/kustomization.yaml
@@ -20,8 +20,8 @@ resources:
 - service.yaml
 images:
 - name: odh-dashboard
-  newName: quay.io/maistra-dev/odh-dashboard
-  newTag: maistra-dev
+  newName: quay.io/cgarriso/odh-dashboard
+  newTag: test
 - name: oauth-proxy
   newName: registry.redhat.io/openshift4/ose-oauth-proxy
   newTag: v4.8
