add disableServiceMesh flag to manifests

--- a/odh-dashboard/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/odh-dashboard/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -12,6 +12,7 @@ spec:
     disableInfo: false
     disableSupport: false
     disableTracking: true
+    disableServiceMesh: true
     enablement: true
   notebookController:
     enabled: true
