--- a/tests/resources/odh-dashboard/crd/odh-dashboard-crd.yaml
+++ b/tests/resources/odh-dashboard/crd/odh-dashboard-crd.yaml
@@ -41,6 +41,8 @@ spec:
                       type: boolean
                     disableUserManagement:
                       type: boolean
+                    disableServiceMesh:
+                      type: boolean
                 groupsConfig:
                   type: object
                   required:
