--- a/auth/base/kustomization.yaml
+++ b/auth/base/kustomization.yaml
@@ -1,18 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: auth-provider
 resources:
-- secrets.yaml
-- service-account.yaml
-- oauth-client.yaml
-- deployment.yaml
-- service.yaml
-images:
-- name: oauth-proxy
-  # newName: registry.redhat.io/openshift4/ose-oauth-proxy
-  # newTag: v4.8
-  newName: quay.io/openshift/origin-oauth-proxy
-  newTag: latest
-- name: http-https-echo
-  newName: quay.io/bmajsak/http-https-echo
-  newTag: token
+- operator-cluster-wide-no-tls.yaml
+- authconfig.yaml
