--- a/auth/cluster/namespace.yaml
+++ b/auth/cluster/namespace.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name:  auth-provider
+  name:  $AUTH_NS
+  labels:
+    control-plane: authorino-operator
