--- a/auth/mesh/patch-control-plane-external-provider.yaml
+++ b/auth/mesh/patch-control-plane-external-provider.yaml
@@ -7,22 +7,7 @@ spec:
   techPreview:
     meshConfig:
       extensionProviders:
-      - name: external-odh-auth-provider
-        envoyExtAuthzHttp:
-          # TODO rethink service-name.namespace
-          service: auth-service.auth-provider.svc.cluster.local
-          port: 80
-          timeout: 1.5s
-          includeHeadersInCheck:
-          - "authorization"
-          - "cookie"
-          headersToUpstreamOnAllow:
-          - "x-forwarded-access-token"
-          - "authorization"
-          - "path"
-          - "x-auth-request-user"
-          - "x-auth-request-email"
-          - "x-auth-request-access-token"
-          headersToDownstreamOnDeny:
-          - "content-type"
-          - "set-cookie"
+      - name: odh-auth-provider
+        envoyExtAuthzGrpc:
+          service: authorino-authorino-authorization.auth-provider.svc.cluster.local
+          port: 50051
