--- a/auth/rbac/cluster-role.yaml
+++ b/auth/rbac/cluster-role.yaml
@@ -2,7 +2,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auth-service
-  namespace: auth-provider
+  namespace: $AUTH_NS
 rules:
   - verbs:
       - get
