--- a/auth/rbac/role-binding.yaml
+++ b/auth/rbac/role-binding.yaml
@@ -2,7 +2,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auth-service
-  namespace: auth-provider
+  namespace: $AUTH_NS
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
