--- a/auth/rbac/role.yaml
+++ b/auth/rbac/role.yaml
@@ -2,6 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auth-service
+  namespace: $AUTH_NS
 rules:
   - apiGroups:
       - route.openshift.io
