--- a/service-mesh/auth/cluster/kustomization.yaml
+++ b/service-mesh/auth/cluster/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 sortOptions:
   order: fifo # otherwise ServiceMeshMember will be created after the deployment and thus istio will not inject sidecar proxy
 resources:
-- namespace.yaml
+# - namespace.yaml TODO:HARDCODED
 - ../mesh
 - ../base
 - ../rbac # TODO review
