--- a/service-mesh/auth/base/authconfig.yaml
+++ b/service-mesh/auth/base/authconfig.yaml
@@ -2,12 +2,13 @@ apiVersion: authorino.kuadrant.io/v1beta1
 kind: AuthConfig
 metadata:
   name: odh-dashboard-protection
-  namespace: $ODH_NS
+  namespace: opendatahub  # TODO:HARDCODED
   labels:
     authorino/topic: odh
 spec:
   hosts:
-  - "${ODH_ROUTE}"
+  # TODO:HARDCODED - WILL ONLY WORK ON CRC.
+  - "opendatahub-odh-gateway-525eca1d5089dbdc-istio-system.apps-crc.testing"
   identity:
   - name: kubernetes-users
     kubernetes:
@@ -20,7 +21,7 @@ spec:
         valueFrom: { authJSON: auth.identity.username }
       resourceAttributes:
         namespace:
-          value: $ODH_NS
+          value: opendatahub # TODO:HARDCODED
         group:
           value: ""
         resource:
