--- a/service-mesh/auth/base/operator-cluster-wide-no-tls.yaml
+++ b/service-mesh/auth/base/operator-cluster-wide-no-tls.yaml
@@ -2,7 +2,7 @@ apiVersion: operator.authorino.kuadrant.io/v1beta1
 kind: Authorino
 metadata:
   name: authorino
-  namespace: $AUTH_NS
+  namespace: auth-provider # TODO:HARDCODED
 spec:
   image: quay.io/kuadrant/authorino:v0.12.0
   authConfigLabelSelectors: authorino/topic=odh
