--- a/service-mesh/auth/rbac/role-binding.yaml
+++ b/service-mesh/auth/rbac/role-binding.yaml
@@ -2,7 +2,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auth-service
-  namespace: $AUTH_NS
+  namespace: auth-provider # TODO:HARDCODED
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
