--- a/service-mesh/auth/rbac/role.yaml
+++ b/service-mesh/auth/rbac/role.yaml
@@ -2,7 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auth-service
-  namespace: $AUTH_NS
+  namespace: auth-provider # TODO:HARDCODED
 rules:
   - apiGroups:
       - route.openshift.io
