--- a/service-mesh/auth/cluster/kustomization.yaml
+++ b/service-mesh/auth/cluster/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-sortOptions:
-  order: fifo # otherwise ServiceMeshMember will be created after the deployment and thus istio will not inject sidecar proxy
+# sortOptions:
+#   order: fifo # otherwise ServiceMeshMember will be created after the deployment and thus istio will not inject sidecar proxy
 resources:
-# - namespace.yaml TODO:HARDCODED
+- namespace.yaml
 - ../mesh
 - ../base
 - ../rbac # TODO review
