--- a/service-mesh/auth/cluster/namespace.yaml
+++ b/service-mesh/auth/cluster/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name:  $AUTH_NS
+  name:  auth-provider # TODO:HARDCODED
   labels:
     control-plane: authorino-operator
