use manual route rather than ior

--- a/service-mesh/control-plane/base/control-plane.yaml
+++ b/service-mesh/control-plane/base/control-plane.yaml
@@ -7,7 +7,7 @@ spec:
   version: v2.3
   proxy:
     injection:
-      autoInject: true
+      autoInject: false
     runtime:
       container:
         resources:
