fix auth kustomizations

--- a/service-mesh/auth/base/kustomization.yaml
+++ b/service-mesh/auth/base/kustomization.yaml
@@ -3,3 +3,8 @@ kind: Kustomization
 resources:
 - operator-cluster-wide-no-tls.yaml
 - authconfig.yaml
+
+bases:
+- ../mesh
+- ../cluster
+- ../rbac
