--- a/control-plane/base/kustomization.yaml
+++ b/control-plane/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - gateway-route.yaml
 - proxy/filter-oauth2.yaml
 - proxy/filter-propagate-token.yaml
+- oauth-configmap.yaml
 
 patches:
 - path: patch-control-plane-mount-oauth2-secrets.yaml
