add global deny all auth policy

--- a/service-mesh/control-plane/base/kustomization.yaml
+++ b/service-mesh/control-plane/base/kustomization.yaml
@@ -22,6 +22,7 @@ configMapGenerator:
       - resource-templates/patch-dashboard-config.yaml
       - auth-policy.yaml
       - filter-propagate-token.yaml
+      - deny-all-policy.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
