add echos to job for debugging

--- a/service-mesh/control-plane/base/init-job.yaml
+++ b/service-mesh/control-plane/base/init-job.yaml
@@ -27,6 +27,10 @@ spec:
             export TOKEN_ENDPOINT=$(echo $endpoint | jq .token_endpoint)
             export AUTH_ENDPOINT=$(echo $endpoint | jq .authorization_endpoint)
             export OAUTH_ROUTE=$(echo $endpoint | jq .issuer | sed 's/"//g; s/https:\/\///g') # remove quotes and https
+            echo $endpoint
+            echo $TOKEN_ENDPOINT
+            echo $AUTH_ENDPOINT
+            echo $OAUTH_ROUTE
 
             apply_yaml() {
               filename="$1"
