--- a/odh-dashboard/base/deployment.yaml
+++ b/odh-dashboard/base/deployment.yaml
@@ -3,14 +3,13 @@ kind: Deployment
 metadata:
   name: odh-dashboard
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       deployment: odh-dashboard
   template:
     metadata:
       labels:
-        sidecar.istio.io/inject: "true"
         deployment: odh-dashboard
     spec:
       affinity:
@@ -44,7 +43,7 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           timeoutSeconds: 15
-          periodSeconds: 300
+          periodSeconds: 30
           successThreshold: 1
           failureThreshold: 3
         readinessProbe:
@@ -54,6 +53,69 @@ spec:
             scheme: HTTP
           initialDelaySeconds: 30
           timeoutSeconds: 15
-          periodSeconds: 300
+          periodSeconds: 30
           successThreshold: 1
           failureThreshold: 3
+      - name: oauth-proxy
+        args:
+          - --https-address=:8443
+          - --provider=openshift
+          - --upstream=http://localhost:8080
+          - --tls-cert=/etc/tls/private/tls.crt
+          - --tls-key=/etc/tls/private/tls.key
+          - --client-id=dashboard-oauth-client
+          - --client-secret-file=/etc/oauth/client/secret
+          - --scope=user:full
+          - --cookie-secret-file=/etc/oauth/config/cookie_secret
+          - --cookie-expire=23h0m0s
+          - --pass-access-token
+          - '--openshift-delegate-urls={"/": {"resource": "services", "verb": "get", "name": "odh-dashboard"}}'
+          - --skip-auth-regex=^/metrics
+        image: oauth-proxy
+        ports:
+          - containerPort: 8443
+            name: https
+        livenessProbe:
+          httpGet:
+            path: /oauth/healthz
+            port: 8443
+            scheme: HTTPS
+          initialDelaySeconds: 30
+          timeoutSeconds: 1
+          periodSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /oauth/healthz
+            port: 8443
+            scheme: HTTPS
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
+          periodSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2Gi
+          requests:
+            cpu: 500m
+            memory: 1Gi
+        volumeMounts:
+          - mountPath: /etc/tls/private
+            name: proxy-tls
+          - mountPath: /etc/oauth/config
+            name: oauth-config
+          - mountPath: /etc/oauth/client
+            name: oauth-client
+      volumes:
+      - name: proxy-tls
+        secret:
+          secretName: dashboard-proxy-tls
+      - name: oauth-config
+        secret:
+          secretName: dashboard-oauth-config-generated
+      - name: oauth-client
+        secret:
+          secretName: dashboard-oauth-client-generated
