--- a/odh-dashboard/base/routes.yaml
+++ b/odh-dashboard/base/routes.yaml
@@ -1,10 +1,16 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  annotations:
+    kubernetes.io/tls-acme: 'true'
+    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload       
   name: odh-dashboard
 spec:
   port:
-    targetPort: 8080
+    targetPort: 8443
+  tls:
+    insecureEdgeTerminationPolicy: Redirect
+    termination: Reencrypt
   to:
     kind: Service
     name: odh-dashboard
