--- a/odh-dashboard/overlays/service-mesh/patches/oauth-config-patch.yaml
+++ b/odh-dashboard/overlays/service-mesh/patches/oauth-config-patch.yaml
@@ -2,5 +2,5 @@ $patch: delete
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dashboard-oauth-config
+  name: dashboard-oauth-config-generated
   namespace: opendatahub  # TODO:HARDCODED
