change from patches to patchesJSON6902

--- a/odh-dashboard/overlays/service-mesh/kustomization.yaml
+++ b/odh-dashboard/overlays/service-mesh/kustomization.yaml
@@ -10,29 +10,29 @@ resources:
 # - patches/oauth-client-patch.yaml
 # - patches/oauth-config-patch.yaml
 
-patches:
-- path: patches/route-patch.yaml
-  target:
+patchesJson6902:
+- target:
     group: route.openshift.io
     version: v1
     kind: Route
     name: odh-dashboard
-- path: patches/service-patch.yaml
-  target:
+  path: patches/route-patch.yaml
+- target:
     version: v1
     kind: Service
     name: odh-dashboard
-- path: patches/service-account-patch.yaml
-  target:
+  path: patches/service-patch.yaml
+- target:
     version: v1
     kind: ServiceAccount
     name: odh-dashboard
-- path: patches/deployment-patch.yaml
-  target:
+  path: patches/service-account-patch.yaml
+- target:
     group: apps
     version: v1
     kind: Deployment
     name: odh-dashboard
+  path: patches/deployment-patch.yaml
 
 images:
 - name: odh-dashboard
