--- a/service-mesh/control-plane/base/control-plane.yaml
+++ b/service-mesh/control-plane/base/control-plane.yaml
@@ -27,7 +27,7 @@ spec:
         - volume:
             secret:
               secretName: istio-odh-oauth2
-              optional: true
+              optional: false
           volumeMount:
             name: odh-oauth2-tokens
             mountPath: "/etc/istio/odh-oauth2"
