feat(mvp): enabling service mesh for ODH (#818)
* feat(mvp): enabling service mesh for ODH

Co-authored-by: Bartosz Majsak <bartosz.majsak@gmail.com>
Co-authored-by: Cameron Garrison <cgarriso@redhat.com>
Co-authored-by: Wambugu “Innocent” Kironji <37008228+InnocentK@users.noreply.github.com>

This PR implements our MVP of enabling service mesh with ODH, using Authorino combined with service mesh to facilitate authorization to ODH components.

To deploy ODH with Service Mesh, follow along with our instructions found in `enabling_ossm.md` to find a reference KfDef along with other steps.

Notes:
- Current implementation relies on some hardcoded namespaces: using `opendatahub` for the KfDef namespace, and `istio-system` + `auth-provider` for the OSSM SMCP and Authorino resources respectively. Ideally we would not be hardcoding `opendatahub`, we are looking for suggestions on how to avoid this.
- We use an initJob to dynamically create resources based on cluster configuration + to allow for secret propagation between requisite resources. In the future, this will ideally be implemented by a more sophisticated controller/control plane to create and reconcile these resources.
- We do not support a migration path for pre-existing ODH deployments yet.
- We do not use the opendatahub-operator `secret-generator` to create our `OauthClient` resource as we need the secret to be propagated to another resource - in the future, we may extend the `secret-generator` to perform this functionality rather than handle it in our initJob or in a controller. Is this something that folks well-versed in the operator think could be possible?
- We configure our service mesh deployment to use `autoInject`, injecting to all pods found in the mesh namespaces by default for convenience. This may cause problems if future components not yet considered should not be in the mesh, so this may be something to revisit.

* chore: re-add mistakenly removed cert secret (#11)

re-add mistakenly removed cert 

--- a/odh-common/base/kustomization.yaml
+++ b/odh-common/base/kustomization.yaml
@@ -11,6 +11,11 @@ commonLabels:
 configMapGenerator:
 - name: odh-common-config
   env: params.env
+- name: service-mesh-refs
+  literals:
+    - MESH_NAMESPACE=$(istioNamespace)
+    - CONTROL_PLANE_NAME=$(smcpName)
+  
 generatorOptions:
   disableNameSuffixHash: true
 
@@ -21,7 +26,21 @@ vars:
     name: odh-common-config
     apiVersion: v1
   fieldref:
-    fieldpath: metadata.namespace
+    fieldpath: data.namespace
+- name: istioNamespace
+  objref:
+    kind: ConfigMap
+    name: odh-common-config
+    apiVersion: v1
+  fieldref:
+    fieldpath: data.istioNamespace
+- name: smcpName
+  objref:
+    kind: ConfigMap
+    name: odh-common-config
+    apiVersion: v1
+  fieldref:
+    fieldpath: data.smcpName
 
 configurations:
 - params.yaml
