--- a/odh-common/base/params.yaml
+++ b/odh-common/base/params.yaml
@@ -2,3 +2,15 @@ varReference:
 - path: spec/targetNamespaces
   kind: OperatorGroup
   apiGroup: operators.coreos.com
+- path: spec/controlPlaneRef/name
+  kind: ServiceMeshMember
+  apiGroup: maistra.io/v1
+- path: spec/controlPlaneRef/namespace
+  kind: ServiceMeshMember
+  apiGroup: maistra.io/v1
+- path: data/CONTROL_PLANE_NAME
+  kind: ConfigMap
+  apiGroup: v1
+- path: data/MESH_NAMESPACE
+  kind: ConfigMap
+  apiGroup: v1
