--- a/odh-dashboard/apps/kustomization.yaml
+++ b/odh-dashboard/apps/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 commonLabels:
   app: odh-dashboard
   app.kubernetes.io/part-of: odh-dashboard
-bases:
+resources:
   - ./jupyter
