--- a/model-mesh/base/params.env
+++ b/model-mesh/base/params.env
@@ -4,4 +4,4 @@ odh-modelmesh-runtime-adapter=quay.io/opendatahub/modelmesh-runtime-adapter:v0.1
 odh-modelmesh=quay.io/opendatahub/modelmesh:v0.11.0-alpha
 odh-openvino=quay.io/opendatahub/openvino_model_server:2022.3-gpu
 odh-modelmesh-controller=quay.io/opendatahub/modelmesh-controller:v0.11.0-alpha
-odh-model-controller=quay.io/opendatahub/odh-model-controller:v0.11.0-alpha
+odh-model-controller=quay.io/edgarhz/odh-model-controller:service-mesh-integration
