--- a/model-mesh/odh-modelmesh-controller/overlays/odh/quickstart.yaml
+++ b/model-mesh/odh-modelmesh-controller/overlays/odh/quickstart.yaml
@@ -41,6 +41,7 @@ spec:
     metadata:
       labels:
         component: model-mesh-etcd
+        sidecar.istio.io/inject: "false"
     spec:
       volumes:
         - name: scripts
