add notebook logout rewrite to vs

--- a/service-mesh/control-plane/base/resource-templates/08_virtual-service.yaml
+++ b/service-mesh/control-plane/base/resource-templates/08_virtual-service.yaml
@@ -8,6 +8,17 @@ spec:
   hosts:
   - "opendatahub.$DOMAIN"
   http:
+  - match:
+    - uri:
+        # match host.com/notebook/ns/username/logout
+        regex: "^/notebook/.*/.*/logout"
+    route:
+    - destination:
+        host: odh-dashboard
+        port:
+          number: 80
+    rewrite:
+      uri: "/oauth/sign_out"
   - route:
     - destination:
         host: odh-dashboard
